--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "framework7": "^3.0.0",
     "framework7-icons": "^0.9.1",
     "framework7-vue": "^3.0.0",
+    "less": "^3.8.0",
+    "less-loader": "^4.1.0",
     "material-design-icons": "^3.0.1",
     "vue": "^2.5.16"
   },
@@ -63,6 +65,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-resources-loader": "^1.3.3",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
